added office is in ALpharetta, GA

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
    <h1>Sell, Buy, or Rent a House, Condo or Townhome.</h1>
    <p>Hire me as your Real Estate Professional.  Why me, I will actually work for you every day; actually answer the phone daily, and submit every offer given to me. As well as all the other things agents should do.   </p>Give me a call at 404-408-5056 </p>
-
+     <br>
+    <p>My office is in Alpharetta, GA will meet you where it is convenient for you. </p>
   </div>
  </div>
 </body> 
